# src/routes/v1/modules/health/health.routes.ts
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import HealthController from '@/controllers/v1/modules/health/health.controller';
+import { authMiddleware } from '@/middlewares/auth/auth.middlewares';
+import { hasRole } from '@/middlewares/authorization/role.middleware';
+
+const router: Router = Router();
+
+router.get('/', authMiddleware, HealthController.simple);
+
+router.get('/detailed', authMiddleware, hasRole('admin'), HealthController.check);
+
+export default router;
